ejercicio 1 + index completo

--- a/index.html
+++ b/index.html
@@ -9,7 +9,31 @@
 </head>
 
 <body>
-
+    <h1>BOLETIN UNO - PHP (Sandra Giménez Guillard)</h1>
+    <li><a href="e1.php"> EJERCICIO 1 </a></li>
+    <li><a href="e2.php"> EJERCICIO 2 </a></li>
+    <li><a href="e3.php"> EJERCICIO 3 </a></li>
+    <li><a href="e4.php"> EJERCICIO 4 </a></li>
+    <li><a href="e5.php"> EJERCICIO 5 </a></li>
+    <li><a href=""> EJERCICIO 6 </a></li>
+    <li><a href=""> EJERCICIO 7 </a></li>
+    <li><a href=""> EJERCICIO 8 </a></li>
+    <li><a href=""> EJERCICIO 9 </a></li>
+    <li><a href=""> EJERCICIO 10 </a></li>
+    <li><a href=""> EJERCICIO 11 </a></li>
+    <li><a href=""> EJERCICIO 12 </a></li>
+    <li><a href=""> EJERCICIO 13 </a></li>
+    <li><a href=""> EJERCICIO 14 </a></li>
+    <li><a href=""> EJERCICIO 15 </a></li>
+    <li><a href=""> EJERCICIO 16 </a></li>
+    <li><a href=""> EJERCICIO 17 </a></li>
+    <li><a href=""> EJERCICIO 18 </a></li>
+    <li><a href=""> EJERCICIO 19 </a></li>
+    <li><a href=""> EJERCICIO 20 </a></li>
+    <li><a href=""> EJERCICIO 21 </a></li>
+    <li><a href=""> EJERCICIO 22 </a></li>
+    <li><a href=""> EJERCICIO 23 </a></li>
+    <li><a href=""> EJERCICIO 24 </a></li>
 </body>
 
 </html>
