--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     <li><a href="e3.php"> EJERCICIO 3 </a></li>
     <li><a href="e4.php"> EJERCICIO 4 </a></li>
     <li><a href="e5.php"> EJERCICIO 5 </a></li>
-    <li><a href=""> EJERCICIO 6 </a></li>
-    <li><a href=""> EJERCICIO 7 </a></li>
-    <li><a href=""> EJERCICIO 8 </a></li>
-    <li><a href=""> EJERCICIO 9 </a></li>
+    <li><a href="e6.php"> EJERCICIO 6 </a></li>
+    <li><a href="e7.php"> EJERCICIO 7 </a></li>
+    <li><a href="e8.php"> EJERCICIO 8 </a></li>
+    <li><a href="e9.php"> EJERCICIO 9 </a></li>
     <li><a href=""> EJERCICIO 10 </a></li>
     <li><a href=""> EJERCICIO 11 </a></li>
     <li><a href=""> EJERCICIO 12 </a></li>
