--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
     <li><a href="e7.php"> EJERCICIO 7 </a></li>
     <li><a href="e8.php"> EJERCICIO 8 </a></li>
     <li><a href="e9.php"> EJERCICIO 9 </a></li>
-    <li><a href=""> EJERCICIO 10 </a></li>
-    <li><a href=""> EJERCICIO 11 </a></li>
-    <li><a href=""> EJERCICIO 12 </a></li>
-    <li><a href=""> EJERCICIO 13 </a></li>
-    <li><a href=""> EJERCICIO 14 </a></li>
-    <li><a href=""> EJERCICIO 15 </a></li>
-    <li><a href=""> EJERCICIO 16 </a></li>
+    <li><a href="e10.php"> EJERCICIO 10 </a></li>
+    <li><a href="e11.php"> EJERCICIO 11 </a></li>
+    <li><a href="e12.php"> EJERCICIO 12 </a></li>
+    <li><a href="e13.php"> EJERCICIO 13 </a></li>
+    <li><a href="e14.php"> EJERCICIO 14 </a></li>
+    <li><a href="e15.php"> EJERCICIO 15 </a></li>
+    <li><a href="e16.php"> EJERCICIO 16 </a></li>
     <li><a href=""> EJERCICIO 17 </a></li>
     <li><a href=""> EJERCICIO 18 </a></li>
     <li><a href=""> EJERCICIO 19 </a></li>
