--- a/index.html
+++ b/index.html
@@ -10,30 +10,30 @@
 
 <body>
     <h1>BOLETIN UNO - PHP (Sandra Giménez Guillard)</h1>
-    <li><a href="e1.php"> EJERCICIO 1 </a></li>
-    <li><a href="e2.php"> EJERCICIO 2 </a></li>
-    <li><a href="e3.php"> EJERCICIO 3 </a></li>
-    <li><a href="e4.php"> EJERCICIO 4 </a></li>
-    <li><a href="e5.php"> EJERCICIO 5 </a></li>
-    <li><a href="e6.php"> EJERCICIO 6 </a></li>
-    <li><a href="e7.php"> EJERCICIO 7 </a></li>
-    <li><a href="e8.php"> EJERCICIO 8 </a></li>
-    <li><a href="e9.php"> EJERCICIO 9 </a></li>
-    <li><a href=""> EJERCICIO 10 </a></li>
-    <li><a href=""> EJERCICIO 11 </a></li>
-    <li><a href=""> EJERCICIO 12 </a></li>
-    <li><a href=""> EJERCICIO 13 </a></li>
-    <li><a href=""> EJERCICIO 14 </a></li>
-    <li><a href=""> EJERCICIO 15 </a></li>
-    <li><a href=""> EJERCICIO 16 </a></li>
-    <li><a href=""> EJERCICIO 17 </a></li>
-    <li><a href=""> EJERCICIO 18 </a></li>
-    <li><a href=""> EJERCICIO 19 </a></li>
-    <li><a href=""> EJERCICIO 20 </a></li>
-    <li><a href=""> EJERCICIO 21 </a></li>
-    <li><a href=""> EJERCICIO 22 </a></li>
-    <li><a href=""> EJERCICIO 23 </a></li>
-    <li><a href=""> EJERCICIO 24 </a></li>
+    <li><a href="./e1.php"> EJERCICIO 1 </a></li>
+    <li><a href="./e2.php"> EJERCICIO 2 </a></li>
+    <li><a href="./e3.php"> EJERCICIO 3 </a></li>
+    <li><a href="./e4.php"> EJERCICIO 4 </a></li>
+    <li><a href="./e5.php"> EJERCICIO 5 </a></li>
+    <li><a href="./e6.php"> EJERCICIO 6 </a></li>
+    <li><a href="./e7.php"> EJERCICIO 7 </a></li>
+    <li><a href="./e8.php"> EJERCICIO 8 </a></li>
+    <li><a href="./e9.php"> EJERCICIO 9 </a></li>
+    <li><a href="./e10.php"> EJERCICIO 10 </a></li>
+    <li><a href="./e11.php"> EJERCICIO 11 </a></li>
+    <li><a href="./e12.php"> EJERCICIO 12 </a></li>
+    <li><a href="./e13.php"> EJERCICIO 13 </a></li>
+    <li><a href="./e14.php"> EJERCICIO 14 </a></li>
+    <li><a href="./e15.php"> EJERCICIO 15 </a></li>
+    <li><a href="./e16.php"> EJERCICIO 16 </a></li>
+    <li><a href="./e17.php"> EJERCICIO 17 </a></li>
+    <li><a href="./e18.php"> EJERCICIO 18 </a></li>
+    <li><a href="./e19.php"> EJERCICIO 19 </a></li>
+    <li><a href="./e20.php"> EJERCICIO 20 </a></li>
+    <li><a href="./e21.php"> EJERCICIO 21 </a></li>
+    <li><a href="./e22.php"> EJERCICIO 22 </a></li>
+    <li><a href="./e23.php"> EJERCICIO 23 </a></li>
+    <li><a href="./e24.php"> EJERCICIO 24 </a></li>
 </body>
 
 </html>
