ej creados FOR SWITCH

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Boletin uno Septiembre 2021</title>
+    <title>Boletin uno PHP</title>
 </head>
 
 <body>
@@ -13,7 +13,7 @@
     <li><a href="./e1.php"> EJERCICIO 1 </a></li>
     <li><a href="./e2.php"> EJERCICIO 2 </a></li>
     <li><a href="./e3.php"> EJERCICIO 3 </a></li>
-    <li><a href="./e4.php"> EJERCICIO 4 </a></li>
+    <li><a href="./e4.php"> EJERCICIO 4 </a></li>S
     <li><a href="./e5.php"> EJERCICIO 5 </a></li>
     <li><a href="./e6.php"> EJERCICIO 6 </a></li>
     <li><a href="./e7.php"> EJERCICIO 7 </a></li>
